--- a/src/app/features/editor/pages/editor-home/editor-home.page.html
+++ b/src/app/features/editor/pages/editor-home/editor-home.page.html
@@ -1,31 +1,31 @@
-<div class="app">
-  <app-editor-toolbar
-    class="app__toolbar"
-    [appName]="appName"
-    [version]="version"
-    [pageIndex]="pageIndex()"
-    [pageCount]="pageCount"
-    [scale]="scale()"
-    [canUndo]="canUndo()"
-    [canRedo]="canRedo()"
-    [hasPdf]="!!pdfDoc"
-    [hasAnnotations]="!!coords().length"
-    [languages]="languages"
-    [selectedLanguage]="languageModel"
-    (prevPage)="prevPage()"
-    (nextPage)="nextPage()"
-    (zoomIn)="zoomIn()"
-    (zoomOut)="zoomOut()"
-    (undo)="undo()"
-    (redo)="redo()"
-    (clearAll)="clearAll()"
-    (downloadAnnotated)="downloadAnnotatedPDF()"
-    (languageChange)="onLanguageChange($event)"
-  ></app-editor-toolbar>
+<ng-container *ngIf="pdfDoc; else emptyState">
+  <div class="app">
+    <app-editor-toolbar
+      class="app__toolbar"
+      [appName]="appName"
+      [version]="version"
+      [pageIndex]="pageIndex()"
+      [pageCount]="pageCount"
+      [scale]="scale()"
+      [canUndo]="canUndo()"
+      [canRedo]="canRedo()"
+      [hasPdf]="!!pdfDoc"
+      [hasAnnotations]="!!coords().length"
+      [languages]="languages"
+      [selectedLanguage]="languageModel"
+      (prevPage)="prevPage()"
+      (nextPage)="nextPage()"
+      (zoomIn)="zoomIn()"
+      (zoomOut)="zoomOut()"
+      (undo)="undo()"
+      (redo)="redo()"
+      (clearAll)="clearAll()"
+      (downloadAnnotated)="downloadAnnotatedPDF()"
+      (languageChange)="onLanguageChange($event)"
+    ></app-editor-toolbar>
 
-  <div class="workspace" *ngIf="pdfDoc; else emptyState">
     <app-editor-sidebar
-      class="workspace__sidebar"
+      class="app__sidebar"
       [fileDropActive]="fileDropActive()"
       [coordsText]="coordsTextModel"
       [templates]="templates()"
@@ -54,109 +54,224 @@
 
     <main class="viewer">
       <div class="canvas-container" #pdfViewer>
-        <canvas #pdfCanvas></canvas>
-        <canvas #overlayCanvas></canvas>
-        <div #annotationsLayer class="annotations-layer"></div>
-        <div class="hitbox" (click)="onHitboxClick($event)"></div>
+        <div class="canvas-stage">
+          <canvas #pdfCanvas></canvas>
+          <canvas #overlayCanvas></canvas>
+          <div #annotationsLayer class="annotations-layer"></div>
+          <div class="hitbox" (click)="onHitboxClick($event)"></div>
 
-        <!-- NUEVA ANOTACIÓN -->
-        <div
-          *ngIf="preview() as p"
-          class="annotation-editor"
-          #previewEditor
-          [style.left.px]="p.field.x * scale()"
-          [style.top.px]="pdfCanvasRef!.nativeElement.height - p.field.y * scale()"
-          (keydown)="onEditorKeydown($event, 'preview')"
-        >
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.text.label' | t }}</span>
-            <input
-              type="text"
-              [(ngModel)]="p.field.mapField"
-              [placeholder]="'annotation.fields.text.placeholder' | t"
-            />
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
-            <select [(ngModel)]="p.field.type">
-              <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
-              <option value="barcode">{{ 'annotation.fields.type.options.barcode' | t }}</option>
-              <option value="signature">{{ 'annotation.fields.type.options.signature' | t }}</option>
-            </select>
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.fontSize.label' | t }}</span>
-            <input type="number" [(ngModel)]="p.field.fontSize" min="6" max="72" />
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.fontColor.label' | t }}</span>
-            <input type="color" [(ngModel)]="previewHexInput" (input)="syncPreviewColorFromHex()" />
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.fontColorRgb.label' | t }}</span>
-            <input type="text" [(ngModel)]="previewRgbInput" (change)="syncPreviewColorFromRgb()" />
-          </label>
-          <div class="editor-actions">
-            <button class="btn" type="button" (click)="confirmPreview()">
-              {{ 'annotation.actions.confirm' | t }}
-            </button>
-            <button class="btn btn--ghost" type="button" (click)="cancelPreview()">
-              {{ 'annotation.actions.cancel' | t }}
-            </button>
+          <div
+            *ngIf="preview() as p"
+            class="annotation-editor"
+            #previewEditor
+            [style.left.px]="p.field.x * scale()"
+            [style.top.px]="pdfCanvasRef!.nativeElement.height - p.field.y * scale()"
+            (keydown)="onEditorKeydown($event, 'preview')"
+          >
+            <label class="field">
+              <span class="field-label">{{ 'annotation.fields.text.label' | t }}</span>
+              <input
+                type="text"
+                [(ngModel)]="p.field.mapField"
+                [placeholder]="'annotation.fields.text.placeholder' | t"
+              />
+            </label>
+            <label class="field">
+              <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
+              <select [(ngModel)]="p.field.type">
+                <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
+                <option value="check">{{ 'annotation.fields.type.options.check' | t }}</option>
+                <option value="radio">{{ 'annotation.fields.type.options.radio' | t }}</option>
+                <option value="number">{{ 'annotation.fields.type.options.number' | t }}</option>
+              </select>
+            </label>
+            <label class="field">
+              <span class="field-label">{{ 'annotation.fields.value.label' | t }}</span>
+              <input
+                type="text"
+                [(ngModel)]="p.field.value"
+                [placeholder]="'annotation.fields.value.placeholder' | t"
+              />
+            </label>
+            <label class="field field-small" *ngIf="p.field.type === 'number'">
+              <span class="field-label">{{ 'annotation.fields.number.decimals.label' | t }}</span>
+              <input type="number" [(ngModel)]="p.field.decimals" min="0" />
+            </label>
+            <label class="field field-small" *ngIf="p.field.type === 'number'">
+              <span class="field-label">{{ 'annotation.fields.number.appender.label' | t }}</span>
+              <input
+                type="text"
+                [(ngModel)]="p.field.appender"
+                [placeholder]="'annotation.fields.number.appender.placeholder' | t"
+              />
+            </label>
+            <label class="field field-small">
+              <span class="field-label">{{ 'annotation.fields.fontSize.label' | t }}</span>
+              <input type="number" [(ngModel)]="p.field.fontSize" min="8" max="72" />
+            </label>
+            <div class="color-section">
+              <span class="field-label">{{ 'annotation.fields.fontColor.label' | t }}</span>
+              <div class="color-row">
+                <input
+                  type="color"
+                  [ngModel]="p.field.color"
+                  (ngModelChange)="onPreviewColorPicker($event)"
+                />
+                <div class="color-inputs">
+                  <input
+                    type="text"
+                    [ngModel]="previewHexInput()"
+                    (ngModelChange)="setPreviewColorFromHex($event)"
+                    [ngModelOptions]="{ standalone: true }"
+                    [placeholder]="'annotation.color.hexPlaceholder' | t"
+                  />
+                  <input
+                    type="text"
+                    [ngModel]="previewRgbInput()"
+                    (ngModelChange)="setPreviewColorFromRgb($event)"
+                    [ngModelOptions]="{ standalone: true }"
+                    [placeholder]="'annotation.color.rgbPlaceholder' | t"
+                  />
+                </div>
+              </div>
+              <small class="color-hint">{{ 'annotation.color.hintPreview' | t }}</small>
+            </div>
+            <div class="editor-actions">
+              <button class="btn btn--primary" type="button" (click)="confirmPreview()">
+                {{ 'annotation.actions.confirm' | t }}
+              </button>
+              <button class="btn btn--ghost" type="button" (click)="cancelPreview()">
+                {{ 'annotation.actions.cancel' | t }}
+              </button>
+            </div>
           </div>
-        </div>
 
-        <!-- ANOTACIÓN EN EDICIÓN -->
-        <div
-          *ngIf="editing() as e"
-          class="annotation-editor annotation-editor--editing"
-          #editEditor
-          [style.left.px]="e.field.x * scale()"
-          [style.top.px]="pdfCanvasRef!.nativeElement.height - e.field.y * scale()"
-          (keydown)="onEditorKeydown($event, 'edit')"
-        >
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.text.label' | t }}</span>
-            <input
-              type="text"
-              [(ngModel)]="e.field.mapField"
-              [placeholder]="'annotation.fields.text.placeholder' | t"
-            />
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
-            <select [(ngModel)]="e.field.type">
-              <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
-              <option value="barcode">{{ 'annotation.fields.type.options.barcode' | t }}</option>
-              <option value="signature">{{ 'annotation.fields.type.options.signature' | t }}</option>
-            </select>
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.fontSize.label' | t }}</span>
-            <input type="number" [(ngModel)]="e.field.fontSize" min="6" max="72" />
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.fontColor.label' | t }}</span>
-            <input type="color" [(ngModel)]="editHexInput" (input)="syncEditColorFromHex()" />
-          </label>
-          <label class="field">
-            <span class="field-label">{{ 'annotation.fields.fontColorRgb.label' | t }}</span>
-            <input type="text" [(ngModel)]="editRgbInput" (change)="syncEditColorFromRgb()" />
-          </label>
-          <div class="editor-actions">
-            <button class="btn" type="button" (click)="confirmEdit()">
-              {{ 'annotation.actions.update' | t }}
-            </button>
-            <button class="btn btn--ghost" type="button" (click)="cancelEdit()">
-              {{ 'annotation.actions.cancel' | t }}
-            </button>
+          <div
+            *ngIf="editing() as e"
+            class="annotation-editor annotation-editor--editing"
+            #editEditor
+            [style.left.px]="e.field.x * scale()"
+            [style.top.px]="pdfCanvasRef!.nativeElement.height - e.field.y * scale()"
+            (keydown)="onEditorKeydown($event, 'edit')"
+          >
+            <span class="editor-badge">{{ 'annotation.editingBadge' | t }}</span>
+            <label class="field">
+              <span class="field-label">{{ 'annotation.fields.text.label' | t }}</span>
+              <input
+                type="text"
+                [(ngModel)]="e.field.mapField"
+                [placeholder]="'annotation.fields.text.placeholder' | t"
+              />
+            </label>
+            <label class="field">
+              <span class="field-label">{{ 'annotation.fields.type.label' | t }}</span>
+              <select [(ngModel)]="e.field.type">
+                <option value="text">{{ 'annotation.fields.type.options.text' | t }}</option>
+                <option value="check">{{ 'annotation.fields.type.options.check' | t }}</option>
+                <option value="radio">{{ 'annotation.fields.type.options.radio' | t }}</option>
+                <option value="number">{{ 'annotation.fields.type.options.number' | t }}</option>
+              </select>
+            </label>
+            <label class="field">
+              <span class="field-label">{{ 'annotation.fields.value.label' | t }}</span>
+              <input
+                type="text"
+                [(ngModel)]="e.field.value"
+                [placeholder]="'annotation.fields.value.placeholder' | t"
+              />
+            </label>
+            <label class="field field-small" *ngIf="e.field.type === 'number'">
+              <span class="field-label">{{ 'annotation.fields.number.decimals.label' | t }}</span>
+              <input type="number" [(ngModel)]="e.field.decimals" min="0" />
+            </label>
+            <label class="field field-small" *ngIf="e.field.type === 'number'">
+              <span class="field-label">{{ 'annotation.fields.number.appender.label' | t }}</span>
+              <input
+                type="text"
+                [(ngModel)]="e.field.appender"
+                [placeholder]="'annotation.fields.number.appender.placeholder' | t"
+              />
+            </label>
+            <label class="field field-small">
+              <span class="field-label">{{ 'annotation.fields.fontSize.label' | t }}</span>
+              <input type="number" [(ngModel)]="e.field.fontSize" min="8" max="72" />
+            </label>
+            <div class="color-section">
+              <span class="field-label">{{ 'annotation.fields.fontColor.label' | t }}</span>
+              <div class="color-row">
+                <input
+                  type="color"
+                  [ngModel]="e.field.color"
+                  (ngModelChange)="onEditColorPicker($event)"
+                />
+                <div class="color-inputs">
+                  <input
+                    type="text"
+                    [ngModel]="editHexInput()"
+                    (ngModelChange)="setEditColorFromHex($event)"
+                    [ngModelOptions]="{ standalone: true }"
+                    [placeholder]="'annotation.color.hexPlaceholder' | t"
+                  />
+                  <input
+                    type="text"
+                    [ngModel]="editRgbInput()"
+                    (ngModelChange)="setEditColorFromRgb($event)"
+                    [ngModelOptions]="{ standalone: true }"
+                    [placeholder]="'annotation.color.rgbPlaceholder' | t"
+                  />
+                </div>
+              </div>
+              <small class="color-hint">{{ 'annotation.color.hintEdit' | t }}</small>
+            </div>
+            <div class="editor-actions">
+              <button
+                class="btn btn--ghost"
+                type="button"
+                (click)="duplicateAnnotation()"
+                [title]="'annotation.actions.duplicate' | t"
+                [attr.aria-label]="'annotation.actions.duplicate' | t"
+              >
+                <span aria-hidden="true">⧉</span>
+              </button>
+              <button
+                class="btn btn--danger"
+                type="button"
+                (click)="deleteAnnotation()"
+                [title]="'annotation.actions.delete' | t"
+                [attr.aria-label]="'annotation.actions.delete' | t"
+              >
+                <span aria-hidden="true">🗑️</span>
+              </button>
+              <button class="btn btn--primary" type="button" (click)="confirmEdit()">
+                {{ 'annotation.actions.update' | t }}
+              </button>
+              <button class="btn btn--ghost" type="button" (click)="cancelEdit()">
+                {{ 'annotation.actions.cancel' | t }}
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </main>
-  </div>
 
-  <ng-template #emptyState>
+    <footer class="app__footer footer">
+      <div class="footer__brand">
+        <img class="footer__logo" src="/logo.svg" [attr.alt]="'Logotipo de ' + appName" />
+        <div class="footer__brand-text">
+          <span class="footer__app-name">{{ appName }}</span>
+          <span class="footer__version">v{{ version }}</span>
+        </div>
+      </div>
+      <div class="footer__details">
+        <span>© {{ currentYear }} {{ appName }}</span>
+        <span>Desarrollado por {{ appAuthor }}</span>
+      </div>
+    </footer>
+  </div>
+</ng-container>
+
+<ng-template #emptyState>
+  <div class="app app--empty">
     <section class="empty-state">
       <div class="empty-state__content">
         <img class="empty-state__logo" src="/logo.svg" [attr.alt]="'Logotipo de ' + appName" />
@@ -167,5 +282,5 @@
         </button>
       </div>
     </section>
-  </ng-template>
-</div>
+  </div>
+</ng-template>
